--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
 
     <h1>This is photes gallery</h1>
-    <div id="gallery">
-    
-      
-    </div>
+    <button id='bt'>Double Click to open it!</button>
+    <div id="gallery"class="hide"></div>
     <script src="script.js"></script>
 </body>
 </html>
